<resources>
    <string name="app_name">Livescores</string>
    <string name="need_restart_for_language">The application need to restart for changing language.</string>
    <string name="about">About about about about about about . About about, about about about about .About about about about about, about .About about about about about about .About about about about about about .About about about about about about .About about about about about about . </string>

    <string name="action_settings">Settings</string>


    <string name="ms1_live_scores">Live Scores</string>
    <string name="ms1_today_scores">Today Scores</string>
    <string name="ms1_yesterday_scores">Yesterday Scores</string>
    <string name="ms1_not_started_scores">Not Started Scores</string>
    <string name="ms1_finished_scores">Finished Scores</string>
    <string name="ms1_tomorrow_scores">Tomorrow Scores</string>
    <string name="ms1.5_leagues">Leagues</string>
    <string name="ms1.5_tables">Tables</string>
    <string name="ms2_livescore_calendar_new">Livescore Calendar New</string>
    <string name="ms2_soccer_predictions">Soccer Predictions</string>
    <string name="ms2_football_news">Football News</string>
    <string name="ms2_soccer_forum">Soccer Forum</string>
    <string name="ms2_football_tables">Football Tables</string>
    <string name="ms3_search">Search</string>
    <string name="ms3_settings">Settings</string>
    <string name="ms3_about">About</string>
    <string name="ms3_filter">Filter</string>
    <string name="ms3_calendar">Calendar</string>
    <string name="ms_loading">Loading</string>
    <string name="ms_h2h">Head to head</string>
    <string name="ms_prediction">Prediction</string>

    <string name="m_open">Open</string>
    <string name="m_close">Close</string>
    <string name="m_select_a_league">Select a league</string>
    <string name="m_select_day">Select day</string>
    <string name="m_today">Today</string>
    <string name="m_no_data_to_display">No data to display</string>
    <string name="m_cancel">cancel</string>
    <string name="m_ok">ok</string>
    <string name="m_match_details">Match details</string>
    <string name="m_search">search</string>
    <string name="requesting_permission">Requesting permission</string>
    <string name="permission_read_phone_state_explanation">"Read phone state" is needed for get device id</string>
    <string name="read_phone_state_permission_was_denied">"Read phone state" permission was denied</string>
    <string name="read_phone_state_permission_was_granted">"Read phone state" permission was granted</string>
    <string name="m_language">Language</string>
    <string name="m_notifications">Notifications</string>
    <string name="m_cant_load_data">Can not load the data</string>


    //        CATEGORIES = {"Live", "Today", "Yesterday", "Not Started", "Finished","Tomorrow"};


    <string name="live">Live</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="not_started">Not Started</string>
    <string name="finished">Finished</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="m_api_info" translatable="false">info.php?id=</string>
    <string name="m_api_details" translatable="false">details.php?id=</string>
    <string name="m_api_h2h" translatable="false">h2h.php?id=</string>
    <string name="m_api_predict" translatable="false">predict.php?id=</string>
    <string name="m_api_tables" translatable="false">tables/index.php</string>
    <string name="m_api_tables_leagues" translatable="false">tables/leagues.php?id=</string>
    <string name="m_api_tables_view" translatable="false">tables/view.php?id=</string>
    <string name="m_api_leagues" translatable="false">leagues/index.php</string>
    <string name="m_api_leagues_view" translatable="false">leagues/view.php?id=</string>

    <string name="m_min">m</string>
    <string name="m_sec">s</string>

    <string-array name="table_header">
        <item>team</item>
        <item>g</item>
        <item>w</item>
        <item>d</item>
        <item>l</item>
        <item>p</item>
    </string-array>
    <string name="title_activity_splash" translatable="false">Splash</string>
    <string name="title_activity_settings">settings</string>
    <string name="m_autorefresh">Auto refresh</string>

</resources>
